feat: add questionnaire and recommendations
